--- a/header2/header2.html
+++ b/header2/header2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>header2</title>
     <link rel="stylesheet" href="header2.css">
+    <link rel="icon" href="/img/a-cat-holdung-an-ak-47.png" type="image/x-icon">
 </head>
 <body>
     <header class="header">
