commit mới đây

--- a/test-2/dcm.html
+++ b/test-2/dcm.html
@@ -9,8 +9,6 @@
 <body>
     <input type="text" id="search-box" placeholder="Tìm kiếm sản phẩm..." onkeyup="searchProduct()">
     <div id="search-results"></div>    
-    
-
 
     <p>Chọn sản phẩm (chỉ chọn một):</p>
     <input type="checkbox" id="giay" name="product" value="giay" onclick="onlyOne(this)">
@@ -67,7 +65,7 @@
 <body>
     <form action="">
         <h1>Cart</h1>
-        <input type="text" class="search" list="food" id="fav-food" placeholder="Search your favorite item">
+        <input type="text" class="search" list="food"  placeholder="Search your favorite item">
     
         <datalist id="food">
             <option value="Giày thể thao Li-Ning"></option>
